--- a/src/containers/HomePage/components/Slider/styles.module.scss
+++ b/src/containers/HomePage/components/Slider/styles.module.scss
@@ -552,6 +552,7 @@
         font-size: 10.133vw;
         line-height: 15.467vw;
         width: 100%;
+        margin: 0;
       }
       .rightBlock {
         flex-direction: column;
